Fixes sporadic horizontal scrollbars and missing character carat on source viewer.
R: zundel
http://gwt-code-reviews.appspot.com/617803/show

--- a/trunk/src/client/ui/src/com/google/speedtracer/client/view/resources/DetailViews.css
+++ b/trunk/src/client/ui/src/com/google/speedtracer/client/view/resources/DetailViews.css
@@ -11,7 +11,8 @@
   bottom: 0;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   border-bottom: 1px solid #222;
   background: #fff;
   z-index: 15;
